# mintinit

./: Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in
man/: Makefile.am  Makefile.in  halt.8  init.8  initscript.5  inittab.5  killall5.8  last.1  mesg.1  pidof.8  shutdown.8  sulogin.8  wall.1
src/: Makefile.am  Makefile.in  dowall.c  halt.c  ifdown.c  init.c  init.h  init_utmp.c  initpaths.h  initreq.h  killall5.c  last.c  mesg.c  reboot.h  runlevel.c  shutdown.c  sulogin.c  utmp.c  utmpdump.c  wall.c
