dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/init.c)
AM_INIT_AUTOMAKE(mintinit, 0.1.1)
AM_CONFIG_HEADER(config.h)

AM_CONDITIONAL(INSTALLUSR, test x$sbindir=/usr)

AC_PROG_INSTALL
AC_PROG_CC
AC_ISC_POSIX

AC_CHECK_FUNCS(updwtmp)

AC_OUTPUT([src/Makefile man/Makefile Makefile])
