## Process this file with automake to create Makefile.in

man_MANS = halt.8 init.8 initscript.5 inittab.5 killall5.8 last.1 lastb.1 \
mesg.1 pidof.8 poweroff.8 reboot.8 runlevel.8 shutdown.8 sulogin.8 telinit.8 \
wall.1

EXTRA_DIST = halt.8 init.8 initscript.5 inittab.5 killall5.8 last.1 lastb.1 \
mesg.1 pidof.8 poweroff.8 reboot.8 runlevel.8 shutdown.8 sulogin.8 telinit.8 \
wall.1

